--- a/ELTweetTracker/twitterTrack.ipynb
+++ b/ELTweetTracker/twitterTrack.ipynb
@@ -19,8 +19,8 @@
     "users=[]\n",
     "#tweetStream= open(\"tweetTrack.csv\", \"a\")\n",
     "\n",
-    "consumer_key= 'ngLh3KS9VEtXFq8s02w5PtbM4'\n",
-    "consumer_secret= '4h0jwFZarC02UkfkgOCNDWcreUN6ACIK45GTx7VhMXM1QZO6Jo'\n",
+    "consumer_key= '=============='\n",
+    "consumer_secret= '========================'\n",
     "\n",
     "#Setting connection of app to Twitter\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
@@ -76,8 +76,8 @@
     "print user.screen_name\n",
     "print user.followers_count'''\n",
     "\n",
-    "access_token= '3482988675-IlCCSkx3vWDxwbI770ctXX5yGJi1RV81YTGAOw5'\n",
-    "access_token_secret= 'XMARTYuGKdryaWGAlmmcRrBkcHpT3dye1oW5R6DNDk27a'\n",
+    "access_token= '================================='\n",
+    "access_token_secret= '================================='\n",
     "\n",
     "auth.set_access_token(access_token, access_token_secret)\n",
     "auth.secure = True\n",
