Adding shallow entity detection module- capitalized consecutive phrase commit

--- a/ELTweetTracker/module_capital_punct.ipynb
+++ b/ELTweetTracker/module_capital_punct.ipynb
@@ -2,7 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from pandas import read_csv\n",
+    "from itertools import groupby\n",
+    "from operator import itemgetter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def consecutive_cap(tweetWordList_cappos):\n",
+    "    output=[]\n",
+    "    #identifies consequtive numbers in the sequence\n",
+    "    for k, g in groupby(enumerate(tweetWordList_cappos), lambda (i, x): i-x):\n",
+    "        output.append(map(itemgetter(1), g))\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#%%timeit -o\n",
+    "def f(x,tweetWordList):\n",
+    "    '''phrase=\"\"\n",
+    "    for word in x[:-1]:\n",
+    "        phrase+=tweetWordList[word]+\" \"\n",
+    "    phrase+=tweetWordList[x[-1]]'''\n",
+    "    \n",
+    "    list1=map(lambda word: tweetWordList[word]+\" \" , x[:-1])\n",
+    "    phrase=\"\".join(list1)+tweetWordList[x[-1]]\n",
+    "    return phrase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = read_csv('/home/satadisha/Desktop/GitProjects/ELTweetTracker/Collection of Tweets.csv', index_col='ID', header=0)\n",
+    "#print df.columns.values.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -12,18 +73,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['# of RTs', 'HashTags', 'TweetIds', 'Date', 'Replier Ids', 'Retweeted Distinct Ids', 'Tweets', 'Urls in Tweet', 'Username', 'Unnamed: 10', 'Unnamed: 11']\n",
-      "U.S. Presidential Election series Trump, Clinton wins big, Rubio... \n",
-      "['U.S.', 'Presidential', 'Election', 'series', 'Trump,', 'Clinton', 'wins', 'big,', 'Rubio...']\n"
+      "['U.S. Presidential Election', 'Trump, Clinton', 'Rubio...']\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv('/home/satadisha/Desktop/GitProjects/ELTweetTracker/Collection of Tweets.csv', index_col='ID', header=0)\n",
-    "print df.columns.values.tolist()\n",
-    "\n",
+    "#%%timeit -o\n",
     "count=0\n",
     "for index, row in df.iterrows():\n",
     "    if count<1:\n",
@@ -33,23 +88,26 @@
     "        if tweetText.isupper():\n",
     "            print \"All caps module\"\n",
     "        else:\n",
-    "            print tweetText\n",
+    "            #returns word list split at whitespaces; retains punctuation\n",
     "            tweetWordList=tweetText.split()\n",
-    "            print tweetWordList\n",
-    "            #implement the consecutive caps without punctuation clause\n",
+    "            #print [j for (i, j) in enumerate(tweetWordList)]\n",
+    "            \n",
+    "            #returns position of words that are capitalized\n",
+    "            tweetWordList_cappos = map(lambda (index, word) : index, filter(lambda (index, word) : word[0].isupper(), enumerate(tweetWordList)))\n",
+    "            #print tweetWordList_cappos\n",
+    "            output= consecutive_cap(tweetWordList_cappos)\n",
+    "            \n",
+    "            #consecutive capitalized phrases\n",
+    "            consecutive_cap_phrases=map(lambda x: f(x,tweetWordList), output)\n",
+    "            print consecutive_cap_phrases\n",
+    "            \n",
+    "            \n",
+    "            '''#implement the punctuation clause'''\n",
+    "            \n",
     "        count+=1\n",
     "    else:\n",
     "        break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
