modified zhang shasha tree run

--- a/ELTweetTracker/parseTreeEditDistance_zss.ipynb
+++ b/ELTweetTracker/parseTreeEditDistance_zss.ipynb
@@ -13,22 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "2\n"
+     "ename": "TypeError",
+     "evalue": "object() takes no parameters",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-20efc88d05ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0msentence1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"I see\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0msentence2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"I think\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m \u001b[0msen1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparseTreeNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"see\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"VBD\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m99\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"ROOT\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;31m#.addkid(parseTreeNode(1,\"I\",\"PRP\",2,\"SUB\",1))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object() takes no parameters"
      ]
     }
    ],
    "source": [
-    "'''\n",
+    "\n",
     "try:\n",
     "    from editdist import distance as strdist\n",
     "except ImportError:\n",
@@ -59,7 +62,7 @@
     "    def addkid(self, node, before=False):\n",
     "        if before:  self.my_children.insert(0, node)\n",
     "        else:   self.my_children.append(node)\n",
-    "        return self'''\n",
+    "        return self\n",
     "\n",
     "def insert_cost(A):\n",
     "    #print(\"inserting \"+A.my_label)\n",
@@ -83,7 +86,7 @@
     "\n",
     "    \n",
     "\n",
-    "class parseTreeNode(object):\n",
+    "class parseTreeNode:\n",
     "    \n",
     "    def _init_(self, wordID, lemma, posTag, parentID, depRel, nodeID):\n",
     "        self.wordID = wordID\n",
@@ -112,7 +115,16 @@
     "    def get_lemma():\n",
     "        return self.my_lemma\n",
     "    \n",
-    "    \n",
+    "    def addkid(self, node, before=False):\n",
+    "        if before:  self.my_children.insert(0, node)\n",
+    "        else:   self.my_children.append(node)\n",
+    "        return self\n",
+    "\n",
+    "\n",
+    "sentence1=\"I see\"\n",
+    "sentence2=\"I think\"\n",
+    "sen1 = parseTreeNode(2,\"see\",\"VBD\",-99,\"ROOT\",2)\n",
+    "#.addkid(parseTreeNode(1,\"I\",\"PRP\",2,\"SUB\",1))\n",
     "\n",
     "A = (\n",
     "WeirdNode(\"f\")\n",
