--- a/ELTweetTracker/parseTreeEditDistance_zss.ipynb
+++ b/ELTweetTracker/parseTreeEditDistance_zss.ipynb
@@ -2,36 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import zss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object() takes no parameters",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-20efc88d05ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0msentence1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"I see\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0msentence2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"I think\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m \u001b[0msen1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparseTreeNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"see\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"VBD\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m99\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"ROOT\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;31m#.addkid(parseTreeNode(1,\"I\",\"PRP\",2,\"SUB\",1))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: object() takes no parameters"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\tsee\tVBD\t-99\tROOT\n",
+      "\t1\tI\tPRP\t2\tSUB\n",
+      "\t4\tthing\tNNS\t2\tdobj\n",
+      "\t\t3\ta\tDT\t2\tdet\n",
+      "2\tthink\tVBD\t-99\tROOT\n",
+      "\t1\tI\tPRP\t2\tSUB\n",
+      "\t4\tthing\tNNS\t2\tdobj\n",
+      "\t\t3\torange\tJJ\t2\tamod\n",
+      "12\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "import zss\n",
     "try:\n",
     "    from editdist import distance as strdist\n",
     "except ImportError:\n",
@@ -44,6 +37,37 @@
     "def weird_dist(A, B):\n",
     "    return strdist(A, B)\n",
     "\n",
+    "def weird_update_cost(A,B):\n",
+    "    cost=0\n",
+    "    if(A.my_label==B.my_label):\n",
+    "        cost=0\n",
+    "        #print(\"nothing to update\")\n",
+    "    else:\n",
+    "        cost=1\n",
+    "        #print(\"updating \"+A.my_label+\" to \"+B.my_label)'''\n",
+    "    return cost\n",
+    "\n",
+    "def insert_cost(A):\n",
+    "    #print(\"inserting \"+A.my_label)\n",
+    "    cost=3\n",
+    "    return cost\n",
+    "    \n",
+    "def remove_cost(A):\n",
+    "    #print(\"deleting \"+A.my_label)\n",
+    "    cost=3\n",
+    "    return cost\n",
+    "\n",
+    "def update_cost(A,B):\n",
+    "    incost=0\n",
+    "    if(A.posTag!=B.posTag):\n",
+    "        incost+=1\n",
+    "    if(A.depRel!=B.depRel):\n",
+    "        incost+=1\n",
+    "    if(A.lemma==B.lemma):\n",
+    "        cost=incost\n",
+    "    else:\n",
+    "        cost=remove_cost(A)+insert_cost(B)\n",
+    "    return cost\n",
     "\n",
     "class WeirdNode(object):\n",
     "\n",
@@ -63,32 +87,16 @@
     "        if before:  self.my_children.insert(0, node)\n",
     "        else:   self.my_children.append(node)\n",
     "        return self\n",
+    "        \n",
+    "'''class random():\n",
+    "  def __init__(self,num):\n",
+    "    self.num=num\n",
+    "    return'''\n",
     "\n",
-    "def insert_cost(A):\n",
-    "    #print(\"inserting \"+A.my_label)\n",
-    "    cost=1\n",
-    "    return cost\n",
-    "    \n",
-    "def remove_cost(A):\n",
-    "    #print(\"deleting \"+A.my_label)\n",
-    "    cost=1\n",
-    "    return cost\n",
-    "\n",
-    "def update_cost(A,B):\n",
-    "    cost=0\n",
-    "    if(A.my_label==B.my_label):\n",
-    "        cost=0\n",
-    "        #print(\"nothing to update\")\n",
-    "    else:\n",
-    "        cost=1\n",
-    "        #print(\"updating \"+A.my_label+\" to \"+B.my_label)\n",
-    "    return cost\n",
-    "\n",
-    "    \n",
     "\n",
     "class parseTreeNode:\n",
     "    \n",
-    "    def _init_(self, wordID, lemma, posTag, parentID, depRel, nodeID):\n",
+    "    def __init__(self, wordID, lemma, posTag, parentID, depRel, nodeID):\n",
     "        self.wordID = wordID\n",
     "        self.lemma = lemma\n",
     "        self.posTag = posTag\n",
@@ -96,37 +104,72 @@
     "        self.depRel = depRel\n",
     "        self.nodeID = nodeID\n",
     "        self.my_children = list()\n",
-    "    \n",
-    "    def get_children():\n",
+    "\n",
+    "    def get_children(self):\n",
     "        return self.my_children\n",
-    "    \n",
-    "    def get_nodeID():\n",
+    "\n",
+    "    def get_nodeID(self):\n",
     "        return self.nodeID\n",
-    "    \n",
-    "    def get_depRel():\n",
+    "\n",
+    "    def get_depRel(self):\n",
     "        return self.depRel\n",
-    "    \n",
-    "    def get_parentID():\n",
+    "\n",
+    "    def get_parentID(self):\n",
     "        return self.parentID\n",
-    "    \n",
-    "    def get_posTag():\n",
+    "\n",
+    "    def get_posTag(self):\n",
     "        return self.posTag\n",
-    "    \n",
-    "    def get_lemma():\n",
-    "        return self.my_lemma\n",
-    "    \n",
+    "\n",
+    "    def get_lemma(self):\n",
+    "        return self.lemma\n",
+    "\n",
     "    def addkid(self, node, before=False):\n",
     "        if before:  self.my_children.insert(0, node)\n",
     "        else:   self.my_children.append(node)\n",
     "        return self\n",
+    "    \n",
+    "    def printNode(self, node):\n",
+    "        print(str(node.wordID)+'\\t'+node.lemma+'\\t'+ node.posTag+'\\t'+str(node.parentID)+'\\t'+node.depRel)\n",
+    "        return\n",
+    "  \n",
+    "    def printTree(self, node, level):\n",
+    "        print(\"\\t\"*level,end=\"\")\n",
+    "        self.printNode(node)\n",
+    "        if len(node.my_children)>0:\n",
+    "            for child in node.my_children:\n",
+    "                node.printTree(child, level+1)\n",
+    "        return\n",
     "\n",
-    "\n",
+    "#r=random(2)\n",
+    "#print(r.num)\n",
+    "  \n",
     "sentence1=\"I see\"\n",
     "sentence2=\"I think\"\n",
-    "sen1 = parseTreeNode(2,\"see\",\"VBD\",-99,\"ROOT\",2)\n",
-    "#.addkid(parseTreeNode(1,\"I\",\"PRP\",2,\"SUB\",1))\n",
     "\n",
-    "A = (\n",
+    "sen1 = (parseTreeNode(2,\"like\",\"VBD\",-99,\"ROOT\",7)\n",
+    "            .addkid(parseTreeNode(1,\"I\",\"PRP\",2,\"SUB\",1))\n",
+    "            .addkid(parseTreeNode(4,\"to\",\"NNS\",2,\"dobj\",6)\n",
+    "                    .addkid(parseTreeNode(3,\"eat\",\"DT\",2,\"det\",5)\n",
+    "                           .addkid(parseTreeNode(3,\"apples\",\"DT\",2,\"det\",4)\n",
+    "                                   .addkid(parseTreeNode(3,\"big\",\"DT\",2,\"det\",2))\n",
+    "                                   .addkid(parseTreeNode(3,\"red\",\"DT\",2,\"det\",3))\n",
+    "                                  )\n",
+    "                           )\n",
+    "                   )\n",
+    "       )\n",
+    "sen2 = (parseTreeNode(2,\"think\",\"VBD\",-99,\"ROOT\",4)\n",
+    "            .addkid(parseTreeNode(1,\"I\",\"PRP\",2,\"SUB\",1))\n",
+    "            .addkid(parseTreeNode(4,\"thing\",\"NNS\",2,\"dobj\",3)\n",
+    "                    .addkid(parseTreeNode(3,\"orange\",\"JJ\",2,\"amod\",2))\n",
+    "                   )\n",
+    "       )\n",
+    "\n",
+    "#sen1 = parseTreeNode(2,\"think\",\"VBD\",-99,\"ROOT\",2).addkid(parseTreeNode(1,\"I\",\"PRP\",2,\"SUB\",1))\n",
+    "#sen2 = parseTreeNode(2,\"see\",\"VBD\",-99,\"ROOT\",2).addkid(parseTreeNode(1,\"I\",\"PRP\",2,\"SUB\",1))\n",
+    "\n",
+    "sen1. printTree(sen1,0)\n",
+    "sen2. printTree(sen2,0)\n",
+    "'''A = (\n",
     "WeirdNode(\"f\")\n",
     "    .addkid(WeirdNode(\"d\")\n",
     "    .addkid(WeirdNode(\"a\"))\n",
@@ -148,13 +191,23 @@
     ")\n",
     "\n",
     "dist = zss.simple_distance(A, B, WeirdNode.get_children, WeirdNode.get_label, weird_dist)\n",
-    "print (dist)\n",
+    "#print (dist)'''\n",
     "\n",
-    "dist = zss.distance(A, B, WeirdNode.get_children, insert_cost, remove_cost, update_cost)\n",
+    "#dist = zss.distance(A, B, WeirdNode.get_children, insert_cost, remove_cost, update_cost)\n",
+    "dist = zss.distance(sen1, sen2, parseTreeNode.get_children, insert_cost, remove_cost, update_cost)\n",
     "\n",
     "print (dist)\n",
-    "#assert dist == 20"
+    "#assert dist == 20\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
