multiphase implementation: minhashing implemented, beginning LSH

--- a/ELTweetTracker/module_capital_punct.ipynb
+++ b/ELTweetTracker/module_capital_punct.ipynb
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -975,14 +975,20 @@
       "Generating random hash functions...\n",
       "\n",
       "Generating MinHash signatures for all candidates...\n",
+      "[20, 2503]\n",
       "\n",
-      "Generating MinHash signatures took 0.05sec\n",
-      "\n",
-      "Comparing all signatures...\n",
-      "trump: =>donald trump, =>president trump, =>melania trump, =>ivanka trump, =>trump tower, =>trump administration, =>the trump, =>trump university, =>team trump, =>pres trump, =>new: trump, =>donald j. trump, =>trump continues, =>mr. trump, =>trump admin, =>mr trump, =>4 trump, =>trump wh, =>trump transition, =>trump russia, =>trump associates, =>ft: donald trump, =>trump praises 'fox, =>lots of trump, =>trump locks horns, =>3% of trump, =>shade at trump, =>the dummy trump, =>trump dead sea, =>the hill trump, =>indict trump, =>trump music, =>trump moment, =>trump son-in-law, =>trump &;family, =>‘president trump, =>melanoma trump, =>icymi: trump, =>official: trump, =>spicer: trump, =>trace: trump, =>remember: trump, =>go trump, =>trump always, =>trump acts, =>trump walks, =>hope trump, =>trump says, =>rubbish trump, =>neither trump, =>trump wants, =>vote trump, =>trump 2017, =>unmasked' trump, =>scare trump, =>‘unmasked’ trump, =>trump 17, =>trump 2, =>2nd trump, =>trump 33, =>trump 28, =>trump 50-60, =>trump potus, =>love trump, =>trump approves, =>voting trump, =>trump impeachment, =>eric trump, =>behind trump, =>trump salary, =>trump could, =>trump election, =>trump unmasking, =>citizen trump, =>barron trump, =>admitted trump, =>comrade trump, =>nobody trump, =>obstruct trump, =>trump era, =>trump cuts, =>trump far, =>trump victories, =>destroy trump, =>fmr trump, =>tiffany trump, =>trump lies, =>toon trump, \n",
-      "\n",
-      "Comparing MinHash signatures took 0.02sec\n"
+      "Generating MinHash signatures took 0.05sec\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'print (\\'\\nsignatures stored in a numpy array...\\')\\n  \\n# Creates a N x N matrix initialized to 0.\\n\\n# Time this step.\\nt0 = time.time()\\n\\n# For each of the test documents...\\nfor i in range(10, 11):\\n#for i in range(0, numCandidates):\\n    print(list(sorted_NE_container.keys())[i]+\": \",end=\"\")\\n    # Get the MinHash signature for document i.\\n    signature1 = signatures[i]\\n    \\n    # For each of the other test documents...\\n    for j in range(0, numCandidates):\\n        if(j!=i):\\n            # Get the MinHash signature for document j.\\n            signature2 = signatures[j]\\n\\n            count = 0\\n            # Count the number of positions in the minhash signature which are equal.\\n            for k in range(0, numHashes):\\n                count = count + (signature1[k] == signature2[k])\\n\\n            # Record the percentage of positions which matched.    \\n            estJSim= (count / numHashes)\\n            #print(estJSim)\\n            if (estJSim>=0.5):\\n                print(\"=>\"+list(sorted_NE_container.keys())[j]+\", \",end=\"\") \\n    print()\\n# Calculate the elapsed time (in seconds)\\nelapsed = (time.time() - t0)\\n        \\nprint (\"\\nComparing MinHash signatures took %.2fsec\" % elapsed)'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1031,7 +1037,7 @@
     "print ('\\nGenerating MinHash signatures for all candidates...')\n",
     "\n",
     "# List of documents represented as signature vectors\n",
-    "signatures = []\n",
+    "signatures =np.ndarray(shape=(20, numCandidates))\n",
     "\n",
     "# Rather than generating a random permutation of all possible shingles, \n",
     "# we'll just hash the IDs of the shingles that are *actually in the document*,\n",
@@ -1061,7 +1067,7 @@
     "        # For each shingle in the document...\n",
     "        for shingleID in shingleIDSet:\n",
     "            # Evaluate the hash function.\n",
-    "            hashCode = (coeffA[i] * shingleID + coeffB[i]) % nextPrime \n",
+    "            hashCode = (coeffA[i] * shingleID + coeffB[i]) % nextPrime\n",
     "\n",
     "            # Track the lowest hash code seen.\n",
     "            if hashCode < minHashCode:\n",
@@ -1071,15 +1077,16 @@
     "        signature.append(minHashCode)\n",
     "\n",
     "    # Store the MinHash signature for this document.\n",
-    "    signatures.append(signature)\n",
+    "    #signatures.append(signature)\n",
+    "    signatures[:,candidateID]=signature\n",
     "\n",
     "    # Calculate the elapsed time (in seconds)\n",
     "    elapsed = (time.time() - t0)\n",
-    "\n",
+    "print(list(np.shape(signatures)))\n",
     "print (\"\\nGenerating MinHash signatures took %.2fsec\" % elapsed)\n",
     "\n",
     "\n",
-    "print ('\\nComparing all signatures...')\n",
+    "'''print ('\\nsignatures stored in a numpy array...')\n",
     "  \n",
     "# Creates a N x N matrix initialized to 0.\n",
     "\n",
@@ -1087,33 +1094,58 @@
     "t0 = time.time()\n",
     "\n",
     "# For each of the test documents...\n",
-    "for i in range(0, 1):\n",
+    "for i in range(10, 11):\n",
     "#for i in range(0, numCandidates):\n",
     "    print(list(sorted_NE_container.keys())[i]+\": \",end=\"\")\n",
     "    # Get the MinHash signature for document i.\n",
     "    signature1 = signatures[i]\n",
     "    \n",
     "    # For each of the other test documents...\n",
-    "    for j in range(i + 1, numCandidates):\n",
-    "           \n",
-    "        # Get the MinHash signature for document j.\n",
-    "        signature2 = signatures[j]\n",
-    "    \n",
-    "        count = 0\n",
-    "        # Count the number of positions in the minhash signature which are equal.\n",
-    "        for k in range(0, numHashes):\n",
-    "            count = count + (signature1[k] == signature2[k])\n",
-    "    \n",
-    "        # Record the percentage of positions which matched.    \n",
-    "        estJSim= (count / numHashes)\n",
-    "        #print(estJSim)\n",
-    "        if (estJSim> 0.5):\n",
-    "            print(\"=>\"+list(sorted_NE_container.keys())[j]+\", \",end=\"\") \n",
+    "    for j in range(0, numCandidates):\n",
+    "        if(j!=i):\n",
+    "            # Get the MinHash signature for document j.\n",
+    "            signature2 = signatures[j]\n",
+    "\n",
+    "            count = 0\n",
+    "            # Count the number of positions in the minhash signature which are equal.\n",
+    "            for k in range(0, numHashes):\n",
+    "                count = count + (signature1[k] == signature2[k])\n",
+    "\n",
+    "            # Record the percentage of positions which matched.    \n",
+    "            estJSim= (count / numHashes)\n",
+    "            #print(estJSim)\n",
+    "            if (estJSim>=0.5):\n",
+    "                print(\"=>\"+list(sorted_NE_container.keys())[j]+\", \",end=\"\") \n",
     "    print()\n",
     "# Calculate the elapsed time (in seconds)\n",
     "elapsed = (time.time() - t0)\n",
     "        \n",
-    "print (\"\\nComparing MinHash signatures took %.2fsec\" % elapsed)"
+    "print (\"\\nComparing MinHash signatures took %.2fsec\" % elapsed)'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2],\n",
+       "       [ 3,  4,  5],\n",
+       "       [ 6,  7,  8],\n",
+       "       [ 9, 10, 11]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#np.arange(12).reshape(4,3)"
    ]
   },
   {
